# ChatbotPOC

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
src/core/LLM/: llm_client.py
src/core/agents/: base_agent.py  filter_tool_agent.py  sorting_agent.py
src/core/chat/: chat_service.py  history.py
src/core/graph/: graph.py
src/core/mcp/: client.py
src/core/mcp/tools/: tool_registry.py
src/core/mcp/tools/filter_tools/: filter_tools.py  registry.py
src/core/models/: chief_of_staff_model.py
src/core/nodes/: intent_parser_node.py  prompt_parser_node.py
src/core/routes/: chat_routes.py
src/core/state/: state.py
src/core/utils/: constants.py  html_sanitizer.py
